[gd_scene load_steps=23 format=3 uid="uid://bu47w0hvo7qih"]

[ext_resource type="Script" path="res://src/turret/Flambe.gd" id="1_6rtp6"]
[ext_resource type="Texture2D" uid="uid://dbhqkcqsuegyc" path="res://assets/turrets/bigger_base.png" id="2_pr3cd"]
[ext_resource type="Texture2D" uid="uid://j2aofuxsi08k" path="res://assets/turrets/laser-attack.png" id="3_1ob5i"]
[ext_resource type="Texture2D" uid="uid://buqlr51aijn47" path="res://assets/turrets/laser_01_46x46.png" id="4_fk56t"]
[ext_resource type="AudioStream" uid="uid://bxuw1vq81tfci" path="res://assets/sounds/laser4.wav" id="5_jxdir"]

[sub_resource type="Gradient" id="Gradient_rg74k"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2eopp"]
gradient = SubResource("Gradient_rg74k")
width = 32
height = 32

[sub_resource type="AtlasTexture" id="AtlasTexture_ax7tg"]
atlas = ExtResource("4_fk56t")
region = Rect2(0, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2fi"]
atlas = ExtResource("4_fk56t")
region = Rect2(46, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j0js"]
atlas = ExtResource("4_fk56t")
region = Rect2(92, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r7ch"]
atlas = ExtResource("4_fk56t")
region = Rect2(138, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_11xyl"]
atlas = ExtResource("4_fk56t")
region = Rect2(184, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_ino62"]
atlas = ExtResource("4_fk56t")
region = Rect2(230, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvlbm"]
atlas = ExtResource("4_fk56t")
region = Rect2(276, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7gyo"]
atlas = ExtResource("4_fk56t")
region = Rect2(322, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6hof"]
atlas = ExtResource("4_fk56t")
region = Rect2(368, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_io8dx"]
atlas = ExtResource("4_fk56t")
region = Rect2(414, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nm83"]
atlas = ExtResource("4_fk56t")
region = Rect2(460, 0, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ig4p"]
atlas = ExtResource("4_fk56t")
region = Rect2(0, 0, 46, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_0gv60"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax7tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j0js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r7ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11xyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ino62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvlbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7gyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6hof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io8dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nm83")
}],
"loop": false,
"name": &"attack1",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ig4p")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7f0gc"]
size = Vector2(96, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5pa0j"]
size = Vector2(32, 32)

[node name="Flambe" type="Node2D"]
script = ExtResource("1_6rtp6")

[node name="rotation_point" type="Node2D" parent="."]
position = Vector2(16, 16)

[node name="Range_indicator" type="Sprite2D" parent="rotation_point"]
self_modulate = Color(1, 0.992157, 0, 0.392157)
z_index = 2
position = Vector2(0, -32)
scale = Vector2(3, 1)
texture = SubResource("GradientTexture2D_2eopp")

[node name="Base" type="Sprite2D" parent="rotation_point"]
z_index = -1
texture = ExtResource("2_pr3cd")

[node name="gun_rotation" type="Node2D" parent="rotation_point"]
z_index = 1

[node name="attack" type="TextureRect" parent="rotation_point/gun_rotation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 12.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
texture = ExtResource("3_1ob5i")
expand_mode = 1
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Gun" type="AnimatedSprite2D" parent="rotation_point/gun_rotation"]
sprite_frames = SubResource("SpriteFrames_0gv60")
animation = &"idle"
autoplay = "idle"

[node name="attack_collision" type="Area2D" parent="rotation_point"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotation_point/attack_collision"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_7f0gc")

[node name="Click_area" type="Area2D" parent="rotation_point"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotation_point/Click_area"]
shape = SubResource("RectangleShape2D_5pa0j")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 4.0

[node name="attack_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jxdir")
bus = &"sfx"

[connection signal="body_entered" from="rotation_point/attack_collision" to="." method="_on_attack_collision_body_entered"]
[connection signal="body_exited" from="rotation_point/attack_collision" to="." method="_on_attack_collision_body_exited"]
[connection signal="input_event" from="rotation_point/Click_area" to="." method="_on_click_area_input_event"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
